# System_and_networks

./: .gitattributes  .gitignore
Computer_Graphics/: Target_List.md
Computer_Graphics/01_line_generation_using_slope_method_DDA_and_Bresenhams_algo/: CMakeLists.txt  notes.md  slope.cpp
Computer_Graphics/02_circle_generation_using_mid_point_and_Bresenhams_algo/: CMakeLists.txt  circle_generation.cpp  notes.md  queries.md
Computer_Graphics/03_ellipse_generation_using_mid_point_method/: CMakeLists.txt  ellipse_generation.cpp  notes.md
Computer_Graphics/04_polygon_filling/: CMakeLists.txt  Notes.md  polygon_fill.cpp
Computer_Graphics/test/: CMakeLists.txt  Game.cpp  Game.hpp
Computer_Networks/: .gitignore  01_Implementation_of_data_link_layer_framing_method_such_as_character_stuffing_and_bit_stuffing_in_C..md  01_Implementation_of_data_link_layer_framing_method_such_as_character_stuffing_and_bit_stuffing_in_C.c  02_Implementation_OF_CRC_Algorithm_in_C..md  03_Hamming_(7,4)_code.md  04_LZW_compression.c  04_LZW_compression.md  README.MD  Targer_list.md  Target_list_Phase_2.md
Computer_Networks/05_Listener_Talker_Socket_program/: Client.c  Notes.md
Computer_Networks/06_DES_Algorithm/: 00_Insigths.md  File_structure.md  Insigths.md  bit_utils.h  des.c  fiestel.c  fiestel.h  key_schedule.h  main.c  permutations.h  tables.c  tables.h
Computer_Networks/Phase_1_lab_level/: 02_Implementation_OF_CRC_Algorithm_in_C..md  03_Hamming_7_4_code.c  (+2 more)
DBMS/: Target_List.md  Target_phase_1.md
OOPS/: Target_List_Lab.md
Resume/: Targer_List.md
System_Design/: Target_List.md
(+19 files in other folders)
